<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
     <TextView
        android:id="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about" 
        android:textColor="#FF0000"/>
     <ImageView
         android:layout_below="@id/text"
         android:id="@+id/image"
         android:src="@drawable/mock0"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/desc"
         />
<TableLayout android:layout_below="@id/image"
          android:id="@+id/table"
          android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="0,5"
        android:stretchColumns="0,5">
      <TableRow>
        <Button 
        android:id="@+id/bn0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/bn0"
        android:textColor="@drawable/my_button"/>
        <Button 
        android:id="@+id/bn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/bn1"
        android:textColor="@drawable/my_button"/>
        <Button 
        android:id="@+id/bn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/bn2"
        android:textColor="@drawable/my_button"/>
        <Button 
        android:id="@+id/bn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/bn3"
        android:textColor="@drawable/my_button"/>
        <Button 
        android:id="@+id/bn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/bn4"
        android:textColor="@drawable/my_button"/>
        <Button 
        android:id="@+id/bn5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/bn5"
        android:textColor="@drawable/my_button"/>
    </TableRow>
</TableLayout>
    <Button 
        android:layout_below="@id/table"
        android:id="@+id/bn"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/ok"
        android:textColor="@drawable/my_next"/>
    

</RelativeLayout>
